# locallens

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
config/: domain_chunking.json  video_cycle.defaults.json
examples/cycle/: sample_synonyms.json  sample_vlm_captions.json
examples/tracks/: sample_static_scene.json
examples/transcripts/: finance_portfolio_basics.json  medical_glucose_management.json  sports_pressing_tactics.json
src/videosearch/: __init__.py  chunking.py  cli.py  embedders.py  moment_clip.py  moment_clip_cli.py  moment_overlay.py  moment_overlay_cli.py  moment_query.py  moment_query_cli.py  moment_semantic_cli.py  moments.py  pipeline.py  store.py  types.py  video_cycle.py  video_cycle_cli.py
tests/: test_moment_clip.py  test_moment_overlay.py  test_moment_query.py  test_moment_semantic.py  test_moments.py  test_pipeline.py  test_video_cycle.py
