[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-semantic-search"
version = "0.1.0"
description = "Domain-adaptable semantic search over video transcripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.7.0"
]
app = [
  "streamlit>=1.39"
]
video = [
  "opencv-python-headless>=4.9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
